fixed text overflow out of book div

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -39,6 +39,8 @@ body {
 
 .book-title {
     font-size: 23px;
+    word-break: break-all;
+    overflow-wrap: break-word;
 }
 
 .book-list {
